@@ -397,9 +397,9 @@ NSMapInsertKnownAbsent(NSMapTable *table, const void *key, const void *value)
      * information.  Not difficult to do, just something for a later
      * date. */
     [NSException raise:NSInvalidArgumentException
-                 format:@"NSMapTable: illegal reinsertion of: %s -> %s",
-                 [NSMT_DESCRIBE_KEY(table, key) cString],
-                 [NSMT_DESCRIBE_VALUE(table, value) cString]];
+                 format:@"NSMapTable: illegal reinsertion of: %@ -> %@",
+                 NSMT_DESCRIBE_KEY(table, key),
+                 NSMT_DESCRIBE_VALUE(table, value)];
   }
   else
   {
@@ -445,8 +445,8 @@ NSStringFromMapTable(NSMapTable *table)
    * descriptions to the string. */
   while (NSNextMapEnumeratorPair(&enumerator, &key, &value))
     [string appendFormat:@"%@ = %@;",
-	    [(keyCallBacks.describe)(table, key) cString],
-	    [(valueCallBacks.describe)(table, value) cString]];
+	    (keyCallBacks.describe)(table, key),
+	    (valueCallBacks.describe)(table, value)];
 
   /* Note that this string'll need to be `retain'ed. */
   return string;
